force-app/main/default/objects/Monthly_Unit__c/Monthly_Unit__c.object-meta.xml
<CustomObject>
    <label>Monthly Unit</label>
    <nameField>
        <label>Monthly Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>