force-app/main/default/objects/Monthly_Unit__c/fields/Award__c.field-meta.xml
<CustomField>
    <fullName>Award__c</fullName>
    <label>Award</label>
    <referenceTo>Award__c</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>