force-app/main/default/objects/Monthly_Unit__c/fields/Check_Request__c.field-meta.xml
<CustomField>
    <fullName>Check_Request__c</fullName>
    <label>Check Request</label>
    <referenceTo>Check_Request__c</referenceTo>
    <relationshipLabel>Monthly Units</relationshipLabel>
    <relationshipName>Monthly_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>