force-app/main/default/objects/Monthly_Unit__c/fields/Cost_Share__c.field-meta.xml
<CustomField>
    <fullName>Cost_Share__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>