force-app/main/default/objects/Monthly_Unit__c/fields/Num_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Units__c</fullName>
    <label># of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>