force-app/main/default/objects/Monthly_Unit__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Monthly Units</relationshipLabel>
    <relationshipName>Monthly_Units</relationshipName>
    <type>Lookup</type>
</CustomField>