force-app/main/default/objects/Monthly_Unit__c/fields/PercentMatch__c.field-meta.xml
<CustomField>
    <fullName>PercentMatch__c</fullName>
    <formula>IF(
CONTAINS( TEXT(Type__c) , &quot;OAA&quot;),
 Gross_Amount__c * 0.1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For certain Funding Sources, this % is removed from the reimbursement calculation.</inlineHelpText>
    <label>10% Match</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>