force-app/main/default/objects/Monthly_Unit__c/fields/Program_Income__c.field-meta.xml
<CustomField>
    <fullName>Program_Income__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Program Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>