force-app/main/default/objects/Monthly_Unit__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Monthly Units</relationshipLabel>
    <relationshipName>Monthly_Units</relationshipName>
    <type>Lookup</type>
</CustomField>