force-app/main/default/objects/Monthly_Unit__c/fields/Yearly_Budget__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Budget__c</fullName>
    <label>Yearly Budget</label>
    <referenceTo>Yearly_Budget__c</referenceTo>
    <relationshipLabel>Monthly Units</relationshipLabel>
    <relationshipName>Monthly_Units</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>