force-app/main/default/objects/Monthly_Unit__c/recordTypes/Actual_Cost.recordType-meta.xml
<RecordType>
    <fullName>Actual_Cost</fullName>
    <active>true</active>
    <label>Actual Cost</label>
</RecordType>