force-app/main/default/objects/Monthly_Unit__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <label>Service</label>
</RecordType>